@@ -24,6 +24,7 @@ import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.prep.PreparedGeometryFactory;
 
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -45,8 +46,8 @@ final class PriorityCalculator {
                 priorityList.add(GeoToValueEntry.create(priorityKey, new PreparedGeometryFactory().create(geometry),
                         (Number) value, 1, 0, 1));
             } else {
-                if (!(value instanceof Map))
-                    throw new IllegalArgumentException(priorityKey + ": non-root entries require a map but was: " + value.getClass().getSimpleName());
+                if (!(value instanceof LinkedHashMap))
+                    throw new IllegalArgumentException(priorityKey + ": non-root entries require a sorted map (LinkedHashMap) but was: " + value.getClass().getSimpleName());
                 final double defaultPriority = 1, minPriority = 0, maxPriority = 1;
                 EncodedValue encodedValue = getEV(lookup, "priority", key);
                 if (encodedValue instanceof EnumEncodedValue) {
